feat: 新增三篇每日新闻文章 - 中国智驾技术领袖盘点、慕尼黑车展供应链分析、AI新闻速递9月11日

--- a/src/content/blog/AI周报-2025年8月第四周行业动态汇总.md
+++ b/src/content/blog/AI周报-2025年8月第四周行业动态汇总.md
@@ -10,7 +10,7 @@ tags: ["AI周报", "大模型", "OpenAI", "华为", "马斯克", "GPT-6", "Grok"
 cover: "/assets/images/weekly.jpeg"
 heroImage: ""
 recommend: true
-top: true
+top: false
 hide: false
 ---
 
